Adding contents of "Windows Tutorial (zip)" from the publisher's website: http://www.wiley.com/legacy/wileychi/glassborowc++/material.html. All changes were provided by the author with the exception of me choosing to reject the change to line_drawing.h that misspells delegate again.
* Makefile now names the library libfgw.a instead of libfgwz.a to match the books.
* Several virtual destructors were added

--- a/fgw_headers/makefile
+++ b/fgw_headers/makefile
@@ -4,7 +4,7 @@ AR = ar.exe
 
   OBJ_DIR = Release
   OUTPUT_DIR = Release
-  TARGET = libfgwz.a
+  TARGET = libfgw.a
   C_INCLUDE_DIRS = 
   C_PREPROC = 
   CFLAGS = -pipe  -Wall -g0 -O2 -frtti -fexceptions 
